Created the ReadMe file and also created the startQuiz function to plan out my ideas

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1>JavaScript Code Quiz</h1>
             <br />
             <p>
-              Correct answer give you a higher score and anytime you get a
+              Correct answers give you a higher score and anytime you get a
               question wrong, time is taken from the timer.
             </p>
             <button type="button" class="btn btn-primary btn-lg" id="start">
