Timer now works correctly

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="container">
       <!-- home page -->
-      <div id="start-page" class="ml-auto p-3">
+      <div id="start-page">
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto text-center">
             <h1>JavaScript Code Quiz</h1>
@@ -40,36 +40,33 @@
       </div>
 
       <!-- container for questions and setting up buttons-->
-      <div
-        class="question col-md-8 ml-auto mr-auto text-center"
-        id="question-window"
-      >
+      <div class="question text-center" id="question-window">
         <h3 id="question-title">question</h3>
         <br />
         <p id="question-text"></p>
         <div class="row" id="answers">
-          <div class="col text-center m-auto">
+          <div class="col text-center">
             <button
               type="button"
-              class="answer-btn btn-primary btn-lg mr-auto mb-2"
+              class="answer-btn btn-primary btn-lg"
               id="ans1"
             ></button>
 
             <button
               type="button"
-              class="answer-btn btn-primary btn-lg mr-auto mb-2"
+              class="answer-btn btn-primary btn-lg"
               id="ans2"
             ></button>
 
             <button
               type="button"
-              class="answer-btn btn-primary btn-lg mr-auto mb-2"
+              class="answer-btn btn-primary btn-lg"
               id="ans3"
             ></button>
 
             <button
               type="button"
-              class="answer-btn btn-primary btn-lg mr-auto mb-2"
+              class="answer-btn btn-primary btn-lg"
               id="ans4"
             ></button>
           </div>
