Quiz functions properly. Still many bugs

--- a/index.html
+++ b/index.html
@@ -24,19 +24,13 @@
     <div class="container">
       <!-- home page -->
       <div id="start-page">
-        <div class="row">
-          <div class="col-md-8 ml-auto mr-auto text-center">
-            <h1>JavaScript Code Quiz</h1>
-            <br />
-            <p>
-              Correct answers give you a higher score and anytime you get a
-              question wrong, time is taken from the timer.
-            </p>
-            <button type="button" class="btn btn-primary btn-lg" id="start">
-              Start Quiz
-            </button>
-          </div>
-        </div>
+        <h1>JavaScript Code Quiz</h1>
+        <br />
+        <p>
+          Correct answers give you a higher score and anytime you get a question
+          wrong, time is taken from the timer.
+        </p>
+        <button type="button" class="btn" id="start">Start Quiz</button>
       </div>
 
       <!-- container for questions and setting up buttons-->
@@ -45,31 +39,13 @@
         <br />
         <p id="question-text"></p>
         <div class="row" id="answers">
-          <div class="col text-center">
-            <button
-              type="button"
-              class="answer-btn btn-primary btn-lg"
-              id="ans1"
-            ></button>
+          <button type="button" class="answer-btn" id="ans1"></button>
 
-            <button
-              type="button"
-              class="answer-btn btn-primary btn-lg"
-              id="ans2"
-            ></button>
+          <button type="button" class="answer-btn" id="ans2"></button>
 
-            <button
-              type="button"
-              class="answer-btn btn-primary btn-lg"
-              id="ans3"
-            ></button>
+          <button type="button" class="answer-btn" id="ans3"></button>
 
-            <button
-              type="button"
-              class="answer-btn btn-primary btn-lg"
-              id="ans4"
-            ></button>
-          </div>
+          <button type="button" class="answer-btn" id="ans4"></button>
         </div>
       </div>
 
